# uav_control

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
circle/src/: circle.cpp
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_simple/: .catkin  .rosinstall  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/circle/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/cmake_utils/: .catkin  .rosinstall  local_setup.sh
devel/.private/decomp_ros_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
keyboard_control/src/: keyboard_input.cpp  keyboard_listener.cpp
logs/decomp_ros_msgs/: build.cmake.000.log.stderr
logs/ego_planner/: build.check.000.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr
logs/my_bspline/: build.cmake.002.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
logs/onboard_detector/: build.cmake.000.log.stderr  build.make.001.log.stderr
logs/px4ctrl/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/rviz_plugins/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
my_bspline/: CMakeLists.txt
my_bspline/src/: bspline.cpp
src/circle/: CMakeLists.txt  package.xml
src/ego_planner/: CMakeLists.txt  package.xml
src/keyboard_control/: CMakeLists.txt  package.xml
src/my_bspline/: CMakeLists.txt  package.xml
src/offboard/: CMakeLists.txt  package.xml
src/offboard/scripts/: fly copy.py
src/offboard/src/: offboard_node.cpp
(+383 files in other folders)
